Fix google map covering contents

--- a/client/src/components/HousingCard.css
+++ b/client/src/components/HousingCard.css
@@ -4,6 +4,8 @@
 }
 
 .unit-card {
+  display: flex;
+  flex-direction: column;
   position: relative;
   height: auto;
   clear: both;
@@ -18,14 +20,14 @@
   height: 50%;
   width: 100%;
   overflow: hidden;
-  position: absolute;
+  min-height: 200px;
+  position: relative;
   border: 1px solid red;
   bottom: 0;
   left: 0;
 }
 
 .map {
-  position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
